Refine content: theory-driven researcher tone, research framing, project descriptions

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Jeon Jun — Computer Vision Researcher & AI Engineer. Hanbat University · AiR Lab. Semantic Segmentation, Federated Learning, Hand Pose Estimation." />
+    <meta name="description" content="Jeon Jun — Theory-driven research in visual understanding. Hanbat University · AiR Lab. Semantic segmentation, hand pose estimation, federated learning." />
     <meta name="keywords" content="Jeon Jun, 전준, Computer Vision, AI, Hanbat University, AiR Lab, Semantic Segmentation, Federated Learning" />
-    <meta property="og:title" content="Jeon Jun | Computer Vision Researcher & AI Engineer" />
-    <meta property="og:description" content="Building perception systems and federated learning pipelines. Hanbat University · AiR Lab." />
+    <meta property="og:title" content="Jeon Jun | Theory-driven research in visual understanding" />
+    <meta property="og:description" content="Deep learning for perception—segmentation, pose estimation, recognition—starting from theoretical analysis and validating through experiments. Hanbat University · AiR Lab." />
     <meta property="og:type" content="website" />
-    <title>Jeon Jun | Computer Vision Researcher &amp; AI Engineer</title>
+    <title>Jeon Jun | Theory-driven research in visual understanding</title>
   </head>
   <body>
     <script>
