Unify page title and meta: Jun Jeon | AI Research Student

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Jun Jeon — Theory-driven research in visual understanding. Hanbat University · AiR Lab. Semantic segmentation, hand pose estimation, federated learning." />
+    <meta name="description" content="Jun Jeon — AI Research Student. Visual understanding: segmentation, pose estimation, recognition. Hanbat University · AiR Lab." />
     <meta name="keywords" content="Jun Jeon, 전준, Computer Vision, AI, Hanbat University, AiR Lab, Semantic Segmentation, Federated Learning" />
-    <meta property="og:title" content="Jun Jeon | Theory-driven research in visual understanding" />
-    <meta property="og:description" content="Deep learning for perception—segmentation, pose estimation, recognition—starting from theoretical analysis and validating through experiments. Hanbat University · AiR Lab." />
+    <meta property="og:title" content="Jun Jeon | AI Research Student" />
+    <meta property="og:description" content="Visual understanding — segmentation, pose estimation, recognition. Hanbat University · AiR Lab." />
     <meta property="og:type" content="website" />
-    <title>Jun Jeon | Theory-driven research in visual understanding</title>
+    <title>Jun Jeon | AI Research Student</title>
   </head>
   <body>
     <script>
